--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a href="#gallery">gallery</a>
         <a href="#review">review</a>
         <a href="#contact">contact</a>
-        <a href="sample.html" target="_blank">sample</a>
+        <a href="contact.html" target="_blank">contact</a>
       </div>
       <div class="icon">
         <i class="fa-solid fa-magnifying-glass" id="search-btn"></i>
